--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.26"
 chrono-tz = "0.8.2"
+lazy_static = "1.4.0"
+serde = "1.0.164"
 serde_json = "1.0.99"
 serenity = { version = "0.11.5", features = ["client", "gateway", "rustls_backend", "model"], default-features = false }
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
